<resources>
    <string name="app_name">7Minutes Workout</string>
    <string name="app_logo">logo</string>
    <string name="button_drawable">button_drawable</string>
    <string name="start_button_value">Start</string>
    <string name="exercise_title">GET READY TO SWEAT!</string>
    <string name="start_timer">10</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_image">exercise image</string>
    <string name="upcoming_exercise">Upcoming Exercise:</string>
    <string name="first_exercise">Squat</string>
    <string name="congratulations">You have finished the workout plan</string>
    <string name="congratulations_title">Congratulations!</string>
    <string name="ok">OK</string>
    <string name="side_plank">Side Plank</string>
    <string name="push_and_rotation">Push And Rotation</string>
    <string name="lunge">Lunge</string>
    <string name="high_knees_running_in_place">High Knees Running In Place</string>
    <string name="plank">Plank</string>
    <string name="triceps_dip_on_chair">Triceps Dip On Chair</string>
    <string name="squat">Squat</string>
    <string name="step_up_on_chair">Step Up On Chair</string>
    <string name="abdominal_crunch">Abdominal Crunch</string>
    <string name="jumping_jacks">Jumping Jacks</string>
    <string name="wall_sit">Wall Sit</string>
    <string name="push_up">Push Up</string>
    <string name="finish">Finished</string>
    <string name="image">correct</string>
    <string name="finishButton">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_have_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You have come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi_button_text">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="calculate_bmi_toolbar_title">Calculate BMI</string>
    <string name="weight_in_kg">Weight (in KG)</string>
    <string name="height_in_cm">Height (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="please_enter_your_height">Please enter your height</string>
    <string name="please_enter_your_weight">Please enter your weight</string>
    <string name="you_really_need_to_take_care_of_your_health_eat_more">You really need to take care of your health! Eat more!</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="you_need_to_take_care_of_your_health_eat_more">You need to take care of your health! Eat more!</string>
    <string name="normal">Normal</string>
    <string name="congratulations_you_are_in_a_good_shape">Congratulations! You are in a good shape!</string>
    <string name="overweight">Overweight</string>
    <string name="you_need_to_take_care_of_your_health_exercise_more">You need to take care of your health! Exercise more!</string>
    <string name="obese_class_i_moderate">Obese Class I (Moderate)</string>
    <string name="obese_class_ii_severe">Obese Class II (Severe)</string>
    <string name="obese_class_iii_very_severe">Obese Class III (Very Severe)</string>
    <string name="us_units">US UNITS</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="please_enter_your_feet_value">Please enter your feet value</string>
    <string name="please_enter_your_inch_value">Please enter your inch value</string>
    <string name="toolbar_title_history_screen">History</string>
    <string name="history">History</string>
    <string name="no_data">No Data Available</string>
</resources>