<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/img_main_page"
        app:layout_constraintBottom_toTopOf="@id/startButtonFrameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/startButtonFrameLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_button_value"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/main_screen_start_button_size"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/bmiButtonFrameLayout"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:background="@drawable/item_circular_color_accent_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/historyButtonFrameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startButtonFrameLayout">

        <TextView
            android:id="@+id/bmi_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/bmi_button_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:id="@+id/bmi_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/bmiButtonFrameLayout"
        app:layout_constraintStart_toStartOf="@id/bmiButtonFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/bmiButtonFrameLayout" />


    <FrameLayout
        android:id="@+id/historyButtonFrameLayout"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="16dp"
        android:background="@drawable/item_circular_color_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bmiButtonFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/startButtonFrameLayout">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_calendar" />

    </FrameLayout>

    <TextView
        android:id="@+id/history_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/history"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/historyButtonFrameLayout"
        app:layout_constraintStart_toStartOf="@id/historyButtonFrameLayout"
        app:layout_constraintTop_toBottomOf="@id/historyButtonFrameLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>