<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/drawable_radio_group_tab_background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/etMetricUnitWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbImperialUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/drawable_units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/drawable_units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etMetricUnitWeight"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:boxStrokeColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/etMetricUnitHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMetricUnitWeightValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etMetricUnitHeight"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/llDisplayBMIResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMetricUnitWeight"
        tools:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMetricUnitHeightValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/usMetrics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/llDisplayBMIResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMetricUnitWeight"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usMetricsFeet"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usMetricsFeetValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/feet"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usMetricsInch"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usMetricsInchValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/inch"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDisplayBMIResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/btnCalculateUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMetricUnitHeight"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvYourBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBMIValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="15.00" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBMIType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvBMIDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCalculateUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:enabled="false"
        android:text="@string/calculate"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llDisplayBMIResult" />

</androidx.constraintlayout.widget.ConstraintLayout>