<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ready_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/exercise_title"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/frame_layout_ready"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frame_layout_ready"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:indeterminate="false"
            android:max="10"
            android:progress="10"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_timer"
                android:textColor="#FFFF"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/upcoming_exercise_ready_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/upcoming_exercise"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_ready"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/upcoming_exercise_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/first_exercise"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/upcoming_exercise_ready_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/exercise_name"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/frame_layout_exercise"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/exercise_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exercise_name"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/progress_bar_exercise"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:indeterminate="false"
            android:max="30"
            android:progress="30"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_color_accent_background"
            android:gravity="center">

            <TextView
                android:id="@+id/tvTimer_exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_timer"
                android:textColor="#FFFF"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/exercise_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/exercise_image"
        android:src="@drawable/ic_squat"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/upcoming_exercise_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_layout_exercise"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/upcoming_exercise_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="16dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/exercise_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rvExerciseStatus"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upcoming_exercise_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/upcoming_exercise"
            android:textSize="18sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/upcoming_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/first_exercise"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        tools:listitem="@layout/item_exercise_status"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/upcoming_exercise_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>